<resources>
    <string name="app_name">DukenApp</string>
    <string name="enterPhone">Enter your phone number</string>
    <string name="nextButton">Next</string>
    <string name="confirmCode">Enter confirmation code</string>
    <string name="addStoreMain">Let\'s add your first store</string>
    <string name="profileData">Let us know a bit more about yourself</string>
    <string name="yourName">Your name</string>
    <string name="yourSurname">Your surname</string>
    <string name="yourStateID">Your State ID</string>
    <string name="continueButton">Continue</string>
    <string name="verifyCode">We have sent you a code on your number </string>
    <string name="IIN">BIN/IIN</string>
    <string name="legalName">Legal Name</string>
    <string name="address">Address</string>
    <string name="welcome">Welcome to Duken</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="orderHistory">Order history</string>
    <string name="scannedCode">Scan result: </string>
    <string name="scanNow">Scan</string>
    <string name="addProduct">Add product</string>
    <string name="productName">Product name</string>
    <string name="save">Save</string>
    <string name="scannedNumber">Scanned number</string>
    <string name="productName2">Product name:</string>
    <string name="productDescription">Product description</string>
    <string name="productDescription2">Product description:</string>
    <string name="name">Name</string>
    <string name="findProduct">Find product</string>
    <string name="find">Find</string>
    <string name="profile">My Profile</string>
    <string name="list">List of products</string>
    <string name="price">Price ($)</string>
    <string name="pieces">Pieces</string>
    <string name="price2">Price ($):</string>
    <string name="inStock">In stock:</string>
    <string name="newOrder">New order</string>
    <string name="makeOrder">Make order</string>
    <string name="sendNewCode">Resend code</string>
    <string name="barcode">Barcode</string>
    <string name="wantDelete">Are you sure that you want to delete this product?</string>
    <string name="search">Search for products</string>
    <string name="orderDetails">Order details</string>
    <string-array name="cities">
        <item>Nur-Sultan</item>
        <item>Almaty</item>
        <item>Semey</item>
        <item>Oskemen</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>