<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AddStoreActivity">

    <TextView
        android:id="@+id/addStoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/epilogue_variable"
        android:gravity="top"
        android:lineSpacingExtra="6sp"
        android:text="@string/addStoreMain"
        android:textColor="#37383D"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationY="-3.15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/IIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addStoreTextView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IINEditText"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:inputType="number"
            android:hint="@string/IIN" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/legalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IIN"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/legalNameEditText"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/legalName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/cities"
        android:layout_below="@id/legalName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCities"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressEditText"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_medium"
        android:lineSpacingExtra="6sp"
        android:translationY="-2.79sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="17sp"
        android:text="@string/continueButton" />

</RelativeLayout>