<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="labelFor"
    tools:context=".VerifyPhoneActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="72dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:width="35dp"
        android:height="26dp"
        android:background="#0000"
        android:lineSpacingExtra="6sp"
        android:textColor="#A2AAC5"
        android:translationY="-2.79sp"
        android:text="@string/nextButton" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEnterCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="6"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/verifyCode"
        android:textSize="17sp"
        android:translationY="-2.79sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_marginTop="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/epilogue_variable"
        android:gravity="top"
        android:lineSpacingExtra="6sp"
        android:text="@string/confirmCode"
        android:textColor="#37383D"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationY="-3.15sp" />

    <TextView
        android:id="@+id/resendCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCode"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:lineSpacingExtra="6sp"
        android:textSize="17sp"
        android:translationY="-2.79sp" />

    <Button
        android:id="@+id/resendCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendNewCode"
        android:textAllCaps="false"
        android:layout_below="@id/resendCodeTextView"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/montserrat_alternates_medium"
        android:backgroundTint="#1D59F5"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>